# toyc-compiler

./: CMakeLists.txt  Makefile
src/: lexer.cpp
